Fix map size on smaller screens

--- a/app/assets/stylesheets/components/_card-shop.scss
+++ b/app/assets/stylesheets/components/_card-shop.scss
@@ -37,7 +37,6 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
   height: 100vh;
-  margin-bottom: 130px;
   @media(max-width: 992px) {
     height: auto;
     margin-bottom: 10px;
@@ -52,7 +51,7 @@
   padding: 10px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 3px;
-
+  margin-bottom: 10px;
   img {
     max-height: 130px;
     border-radius: 5px;
