--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,5 +1,7 @@
 .map {
+  height: 100%;
   width: 900px;
+  position: fixed;
   @media(max-width: 992px) {
     width: 100%;
     height: 300px;
