--- a/app/assets/stylesheets/config/_structure.scss
+++ b/app/assets/stylesheets/config/_structure.scss
@@ -4,8 +4,7 @@ body {
 }
 
 .content {
-  border-radius: 10px;
-  height: 92.5vh;
+  height: 87vh;
 }
 
 .view-container {
@@ -21,16 +20,6 @@ body {
 .padding {
   padding: 20px;
 }
-
-
-// @media(max-width: 992px) {
-//   .logo {
-//     padding: 10px;
-//     display: flex;
-//   }
-// }
-
-
 
 @media (max-width: 992px) {
   body {
